--- a/geostats/src/main/res/layout/dialog_europe_maps.xml
+++ b/geostats/src/main/res/layout/dialog_europe_maps.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ScrollView">
+    style="@style/ScrollView.NoMargin">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -21,12 +21,24 @@
             style="@style/ButCloseDialog"
             android:id="@+id/btClose"/>
 
-        <com.geo.geostats.TouchImage
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <Button
+            style="@style/FragmentButtons"
             android:layout_below="@+id/imageNo"
+            android:id="@+id/btMap1"/>
+
+        <Button
+            style="@style/FragmentButtons"
+            android:layout_toRightOf="@+id/btMap1"
+            android:layout_below="@+id/imageNo"
+            android:id="@+id/btMap2"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:id="@+id/ivMap"
+            android:layout_height="fill_parent"
+            android:layout_below="@+id/btMap1"
             android:src="@drawable/map"
-            android:scaleType="center"
+            android:scaleType="matrix"
             android:contentDescription="@string/Europe"/>
 
     </RelativeLayout>
