--- a/geostats/src/main/res/values/styles.xml
+++ b/geostats/src/main/res/values/styles.xml
@@ -201,6 +201,11 @@
         <item name="android:layout_marginRight">5dp</item>
         <item name="android:scrollbars">none</item>
     </style>
+    <style name="ScrollView.NoMargin">
+        <item name="android:layout_marginLeft">0dp</item>
+        <item name="android:layout_marginRight">0dp</item>
+        <item name="android:fillViewport">true</item>
+    </style>
     <style name="TextViewTitle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
